Align application parameter types with workflow inputs